# Solace-Synth

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.agent/: AGENTS.md  CLAUDE.md  GEMINI.md  Important-Notes-Anshul.md  UI-Notes-Anshul.md  Vision-Document.md  full-repo-code-review-2026-03-10.md  settings.local.json  synth-project-memory.md  temporary-memory.md
.agent/code-reviews/: 2026-03-10-full-code-review.md
.agent/figma/: README.md  design-tokens.md
.agent/plans/: Phase 6 — DSP Roadmap.md  Phase 7 — UI Roadmap.md  Phase 8 — V1 Release Roadmap.md  Phase 8.2 — Preset System Implementation Plan.md  Phase-7-Frontend-Implementation.md  Phase-7-UI-Master-Plan.md  Phase-7.4-Pixel-Perfect-Audit.md  Solace Synth — Initialization Plan.md  Standalone-Packaging-Plan.md  jules-PR-audit-by-gemini.md  phase3-scale-refactor-plan.md
.agent/plans/done/: Phase 7 — UI Roadmap.md  Phase-7.4-Pixel-Perfect-Audit.md  dropdown-implementation-plan.md
.agent/reviews/: 2026-03-10-codex-full-repo-review-v2.md
.agent/rules/: memory-update-protocol.md  project-memory-rule.md
.jules/: bolt.md
Assets/: icon.icns
Assets/Presets/Factory/: Brass.solace  Clean Pad.solace  Crude String.solace  Deep Pluck.solace  Default.solace  Dirty Lead.solace  Fat Bass.solace  Keys.solace  Lead.solace  Loose Pad NABK.solace  Loose Pad.solace  Nostalgic Pad NABK.solace  Nostalgic Pad.solace  Pluck.solace  Smooth Bass.solace  Square Pluck.solace  Stabby Pluck.solace  Sub.solace  Supersaw.solace  Tenshion Builder.solace  Tension Builder.solace  Twinkle Pluck.solace  Warm Pad.solace
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SolaceLogger.h  SolacePresetManager.cpp  SolacePresetManager.h
Source/DSP/: SolaceADSR.h  SolaceDistortion.h  SolaceFilter.h  SolaceLFO.h  SolaceOscillator.h  SolaceSound.h  SolaceVoice.h
Tests/: CMakeLists.txt  Main.cpp  TestSolaceLogger.cpp
UI/: bridge.js  index.html  main.js  styles.css
UI/components/: arrow-selector.js  dropdown.js  fader.js  preset-browser.js  waveform-selector.js
tests/: CMakeLists.txt  PluginEditorTest.cpp
